rnsc/test_data/integration/error/parser/class_body/with_errors_before_class_body2.rns
.class 42
unexpected
